Fix scrollable text areas and improve spacing on offerings page
- Remove overflow auto from card components to prevent scrolling
- Remove fixed heights to allow cards to expand naturally with content
- Add proper margins and min-heights to prevent overlapping sections
- Improve responsive spacing for desktop and mobile views

--- a/src/components/Offerings/cardWithLeftImage.css
+++ b/src/components/Offerings/cardWithLeftImage.css
@@ -5,35 +5,42 @@
 .image-card {
   width: 70%;
   /* position: absolute; */
-  height: 75%;
+  /* height: 75%; */
   /* top: 10%; */
   /* left: 30%; */
   border-color: #839abf;
   border-width: 3px;
-  overflow: auto;
-  /* margin-bottom: 30px; */
+  /* overflow: auto; */
+  margin-bottom: 60px;
 }
 
 .flex-container {
   display: flex;
   position: relative;
+  margin-bottom: 40px;
 }
 
 @media (min-width: 1440px) {
+  .flex-container {
+    min-height: 600px;
+  }
   .image-card {
     position: absolute;
     top: 20%;
     left: 38%;
-    height: 60%;
+    /* height: 60%; */
   }
 }
 
 @media (max-width: 1024px) {
+  .flex-container {
+    min-height: 500px;
+  }
   .image-card {
     position: absolute;
     top: 10%;
     left: 33%;
-    height: 52%;
+    /* height: 52%; */
   }
   .private-wellnes {
     height: 5%;
@@ -45,7 +52,7 @@
     /* position: absolute; */
     /* top: 10%; */
     /* left: 30%; */
-    height: 250px;
+    /* height: auto; */
   }
 }
 
@@ -55,15 +62,17 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 60px;
   }
   .image-card {
     left: 5%;
     width: 100%;
-    height: 75%;
+    /* height: auto; */
     /* border-color: rgb(224, 188, 191, 0.5); */
     border-width: 3px;
-    overflow: auto;
+    /* overflow: visible; */
     position: relative;
     margin: auto;
+    margin-bottom: 40px;
   }
 }
